git-annex (8.20200227) UNRELEASED; urgency=medium

  * Bugfix: Don't ignore --debug when it is followed by -c.

 -- Joey Hess <id@joeyh.name>  Thu, 27 Feb 2020 00:44:11 -0400

git-annex (8.20200226) upstream; urgency=medium

  * New v8 repository version.
  * v7 upgrades automatically to v8. The upgrade deletes old sqlite
    databases, which may cause git-annex to need to do extra work to
    regenerate the databases or due to not having the information from the
    old databases available. Two notable cases are interrupted incremental
    fscks and interrupted exports, both of which will restart from the
    beginning.
  * Improved serialization of filenames and keys to the sqlite databases,
    avoiding encoding problems and speeding up operations on them.
  * Add some missing indexes to sqlite databases. This will speed up
    some things involving export and import remotes, and git-annex smudge.
    Microbenchmarks show around 10-25% speedup of sqlite database operations.
  * add: When adding a whole directory, any dotfiles found in it will
    not be skipped, but will be added to git by default. This behavior
    can be configured with annex.dotfiles.
  * add: Removed special case for explicitly passing dotfiles,
    that no longer adds them to the annex, but to git. This behavior
    can be configured with annex.dotfiles.
  * add: Removed the --include-dotfiles option.
  * initremote, enableremote: Set remote.name.skipFetchAll when
    the remote cannot be fetched from by git, so git fetch --all
    will not try to use it.
  * Fix some cases where handling of keys with extensions varied depending
    on the locale.
  * annex.maxextensionlength used to be the number of characters, not
    bytes, when in a utf-8 locale. It's now always the number of bytes.
  * Extended annex.security.allowed-ip-addresses to let specific ports
    of an IP address to be used, while denying use of other ports.
  * init --version: When the version given is one that automatically